<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopSelection"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/teal_200"
        android:text="@string/select_a_shop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"/>

    <RadioButton
        android:id="@+id/selection_islam_porda_bitan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/islam_porda_bitan"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"/>

    <RadioButton
        android:id="@+id/selection_islam_it_communication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/islam_it_communication"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"/>

    <RadioButton
        android:id="@+id/selection_add_master_plaza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_master_plaza"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"/>

    <Button
        android:id="@+id/selection_btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp"
        android:background="#88798f"
        android:textColor="@color/green"/>

</LinearLayout>