<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10sp">

    <TextView
        android:id="@+id/layout_txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/product_name_label"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_weight="40"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sell_amount"/>

        <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:hint="@string/amount"
            android:id="@+id/layout_edtSellingAmount"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/layout_txtUnit"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/unit"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="0sp"
            android:layout_weight="40"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/selling_price"/>

        <EditText
            android:id="@+id/layout_edtSellingPrice"
            android:layout_width="0sp"
            android:layout_weight="40"
            android:layout_height="wrap_content"
            android:hint="@string/selling_price"
            android:gravity="center"
            android:autofillHints=""
            android:inputType="numberDecimal"/>

        <ImageView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:src="@drawable/calcimagee"
            android:id="@+id/layout_imgCalc"
            android:contentDescription="@string/calculator" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/layout_btnSell"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_weight="50"
            android:textSize="20sp"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>

        <Button
            android:id="@+id/layout_btnCancel"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="50"
            android:textSize="20sp"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>