<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogIn"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16sp">


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0sp"
                android:layout_weight="50"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/enter_email"
                android:textSize="20sp"/>


            <EditText
                android:layout_width="0sp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:id="@+id/login_edtEmail"
                android:hint="@string/enter_here"
                android:gravity="center"
                android:autofillHints=""
                android:inputType="textEmailAddress"/>


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"/>


        <LinearLayout
            android:id="@+id/login_passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0sp"
                android:layout_weight="50"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/enter_password"
                android:textSize="20sp"/>


            <EditText
                android:layout_width="0sp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:id="@+id/login_edtPassword"
                android:hint="@string/enter_here"
                android:gravity="center"
                android:autofillHints=""
                android:inputType="textPassword"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_btnLogin"
            android:text="@string/log_in"/>


    </LinearLayout>



</LinearLayout>